Fix Spring lifecycle method collisions
Choose a lifecycle method name outside the generated proxy method set and keep the regression tests compatible with the Java 8 target.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>